--- a/3-storage-systems/311-afs.md
+++ b/3-storage-systems/311-afs.md
@@ -8,32 +8,32 @@ Read: July 12th, 2024
 
 ## Introduction 
 
-- How does it differ from NFS?
-    - NFS is limited in scalability
-        - E.x. frequent check if cache contents change (basically polling)
-    - NFS cache consistency is hard to describe: depends on low-level implementation details
-        - E.x. **client-side cache timeout intervals**
-    - In AFS: when the file is opened, a client will generally receive the latest consistent copy from the server.
-    - ![alt text](images/311-afs/afs-api.png)
+* How does it differ from NFS?
+    * NFS is limited in scalability
+        * E.x. frequent check if cache contents change (basically polling)
+    * NFS cache consistency is hard to describe: depends on low-level implementation details
+        * E.x. **client-side cache timeout intervals**
+    * In AFS: when the file is opened, a client will generally receive the latest consistent copy from the server.
+    * ![alt text](images/311-afs/afs-api.png)
 
 ## AFSv1
 
-- Details
-    - Upon `open()` call
-        - Client sends a *Fetch* protocol message to server with entire pathname (e.x. `/home/remzi/notes.txt`)
-          - **Different from NFS, which asks for a file handle for each part of the file name.**
-            - NFS will have a file handle for `/home`, then another for `remzi`, and another for `notes.txt`, and so on.
-        - Server traverses the pathname, finds the desired file, and **ships the file** back to client
-        - Client caches the file on local disk
-            - Consecutive R/W: also uses local memory to cache blocks on its local disk
-        - When finish
-            - If modified, flush new version back to the server with *Store* protocol message
+* Details
+    * Upon `open()` call
+        * Client sends a *Fetch* protocol message to server with entire pathname (e.x. `/home/remzi/notes.txt`)
+          * **Different from NFS, which asks for a file handle for each part of the file name.**
+            * NFS will have a file handle for `/home`, then another for `remzi`, and another for `notes.txt`, and so on.
+        * Server traverses the pathname, finds the desired file, and **ships the file** back to client
+        * Client caches the file on local disk
+            * Consecutive R/W: also uses local memory to cache blocks on its local disk
+        * When finish
+            * If modified, flush new version back to the server with *Store* protocol message
 
-- Next-time file accessing
-    - Client first contacts the server (with *TestAuth* protocol message)
-        - Determine whether the file has changed
-        - If not, use the local cache copy
-    - Early version: only cache file contents; directories were only kept at the server
+* Next-time file accessing
+    * Client first contacts the server (with *TestAuth* protocol message)
+        * Determine whether the file has changed
+        * If not, use the local cache copy
+    * Early version: only cache file contents; directories were only kept at the server
 
 ## Problem with V1
 
@@ -41,17 +41,17 @@ Scalability of AFS is largely limited: the server CPU became the bottleneck of t
 
 There are two main problems with AFSv1:
 
-1. **Path-traversal costs are too high**
-    1. *Fetch* / *Store* request: pass entire pathname 
-    2. **CPU time simply walking down directory paths when there’re too many clients**
-    3. **Server spends too much time traversing pathnames**
-2. **The client issues too many TestAuth protocol messages** 
-    1. Just like NFS problem 
-3. Additional problem 
-    1. **Load imbalance** across servers 
-        1. Sol: volumes (or FS) —> an administrator can move across servers to balance load 
-    2. Server used a single distinct process per **client** thus inducing **context switching** and other overheads 
-        1. Sol: building the server with threads instead of processes
+* **Path-traversal costs are too high**
+    * *Fetch* / *Store* request: pass entire pathname 
+    * **CPU time simply walking down directory paths when there’re too many clients**
+    * **Server spends too much time traversing pathnames**
+* **The client issues too many TestAuth protocol messages** 
+    * Just like NFS problem 
+* Additional problem 
+    * **Load imbalance** across servers 
+        * Sol: volumes (or FS) —> an administrator can move across servers to balance load 
+    * Server used a single distinct process per **client** thus inducing **context switching** and other overheads 
+        * Sol: building the server with threads instead of processes
 
 * Venus: client workstation. Vice: set of storage servers. 
 
@@ -59,27 +59,27 @@ There are two main problems with AFSv1:
 
 ### #1: Callback
 
-- AFSv2 introduce **callback** to reduce # of client / server interactions, adding this **state** to the system
-- Client assumes that the file is valid until server tells it (Invalidation)
-- Analogy to: **pulling v.s interrupts**
+* AFSv2 introduce **callback** to reduce # of client / server interactions, adding this **state** to the system
+* Client assumes that the file is valid until server tells it (Invalidation)
+* Analogy to: **pulling v.s interrupts**
 
 ### #2: FID
 
-- Similar to NFS file handle; consists of
-    - Volume identifier
-    - File identifier
-    - “Uniquifier”: to enable reuse of the volume and file IDs when a file is deleted
-- Each Vice file or directory is now identified by a unique fixed-length Fid. Each entry in a directory maps a component of a pathname to a fid. 
-- FID replaces pathnames to specify which file a client was interested in
-    - Client walk the pathname, caching the results
-    - Example
-- Key difference from NFS
-    - **With each fetch**, **AFS client would establish a callback with the server**
-    - Benefit: second access as fast as accessing the file locally (no server interaction). **Basically whole file caching**. 
+* Similar to NFS file handle; consists of
+    * Volume identifier
+    * File identifier
+    * “Uniquifier”: to enable reuse of the volume and file IDs when a file is deleted
+* Each Vice file or directory is now identified by a unique fixed-length Fid. Each entry in a directory maps a component of a pathname to a fid. 
+* FID replaces pathnames to specify which file a client was interested in
+    * Client walk the pathname, caching the results
+    * Example
+* Key difference from NFS
+    * **With each fetch**, **AFS client would establish a callback with the server**
+    * Benefit: second access as fast as accessing the file locally (no server interaction). **Basically whole file caching**. 
 
 **Name resolution**: move the name resolution from server to client, client walks and maps the **pathname to Fid** (i.e. <vol identifier, file identifier, uniquifier>). 
 
-- For example, if a client accessed the file /home/remzi/notes.txt, and home was the AFS directory mounted onto / (i.e., / was the local root directory, but home and its children were in AFS), the client would first Fetch the directory contents of home, put them in the local-disk cache, and set up a callback on home. Then, the client would Fetch the directory thus ensuring that the server would notify the client of a change in its cached state. 
+* For example, if a client accessed the file /home/remzi/notes.txt, and home was the AFS directory mounted onto / (i.e., / was the local root directory, but home and its children were in AFS), the client would first Fetch the directory contents of home, put them in the local-disk cache, and set up a callback on home. Then, the client would Fetch the directory thus ensuring that the server would notify the client of a change in its cached state. 
 
 ### LWP
 
@@ -111,27 +111,27 @@ Server recovery is also harder, **as callbacks are kept in memory. Methods to de
 
 Two important cases:
 
-1. Consistency between processes on *different* machine 
-    1. AFS makes updates visible at the server and invalidates cached copies when the updated file is closed 
-    2. Server then “breaks” callbacks for any clients with cached copies
-    3. Concurrent write: **last writer wins** to the entire file 
-        1. V.s. NFS: final file could end up as mix of updates from clients 
-2. Consistency between processes on the *same* machine 
-    1. Write immediately visible to other local processes (i.e. not wait until file closed) 
-    2. Based upon typical UNIX semantics
+* Consistency between processes on *different* machine 
+    * AFS makes updates visible at the server and invalidates cached copies when the updated file is closed 
+    * Server then “breaks” callbacks for any clients with cached copies
+    * Concurrent write: **last writer wins** to the entire file 
+        * V.s. NFS: final file could end up as mix of updates from clients 
+* Consistency between processes on the *same* machine 
+    * Write immediately visible to other local processes (i.e. not wait until file closed) 
+    * Based upon typical UNIX semantics
 
 ## Other Improvements on AFS
 
-- True global namespace to clients: all files were named the same way on all clients
-    - V.s. NFS: allow each client to mount NFS server in any way
-- Security mechanisms to authenticate users and ensure files private if user desired
-    - V.s. NFS: primitive support for security
-- Flexible user-managed access control (e.x. who exactly can access which files)
-    - V.s. NFS: much less support for this type of sharing
-- Tools to enable simpler management of servers for system admins
-- Sadly, NFS dominates the market place and becomes an open standard. NFSv4 now also adds server state (e.g. an “open” protocol message).
-- Because AFS has a large local disk cache, it will access the file from there when the file is accessed again. NFS, in contrast, only can cache blocks in client memory; as a result, if a large file (i.e., a file bigger than local memory) is re-read, the NFS client will have to re-fetch the entire file from the remote server
-- NFS: flush on close consistency.
+* True global namespace to clients: all files were named the same way on all clients
+    * V.s. NFS: allow each client to mount NFS server in any way
+* Security mechanisms to authenticate users and ensure files private if user desired
+    * V.s. NFS: primitive support for security
+* Flexible user-managed access control (e.x. who exactly can access which files)
+    * V.s. NFS: much less support for this type of sharing
+* Tools to enable simpler management of servers for system admins
+* Sadly, NFS dominates the market place and becomes an open standard. NFSv4 now also adds server state (e.g. an “open” protocol message).
+* Because AFS has a large local disk cache, it will access the file from there when the file is accessed again. NFS, in contrast, only can cache blocks in client memory; as a result, if a large file (i.e., a file bigger than local memory) is re-read, the NFS client will have to re-fetch the entire file from the remote server
+* NFS: flush on close consistency.
 
 ### Volume
 
