--- a/5-security/58-sel4.md
+++ b/5-security/58-sel4.md
@@ -4,7 +4,7 @@ Link: http://web1.cs.columbia.edu/~junfeng/09fa-e6998/papers/sel4.pdf
 
 Resources: https://sel4.systems/About/seL4-whitepaper.pdf
 
-Read: June 29th, 2024. 
+Read: June 29th, 202* 
 
 SeL4 is a microkernel: 
 
@@ -33,50 +33,50 @@ SeL4 now can even be a hypervisor, running VMs like Linux mainstream OS.
 
 ### Summary
 
-> Complete formal verification is the only known way to guarantee that a system is free of programming errors
-> 
+* Complete formal verification is the only known way to guarantee that a system is free of programming errors
+* 
 
 This paper presents the experience in performing the formal, machine-checked verification of the seL4 microkernel from an abstract specification down to its C implementation. This is the first formal proof of functional correctness of a complete, general-purpose operating-system kernel; assuming the correctness of the compiler, assembly code, boot code, managements of caches, and the hardware.
 
 ### Insights
 
-- Microkernels are so small so that they can be formally verified!
+* Microkernels are so small so that they can be formally verified!
 
 ### Kernel Design Process. 
 
-- OS developers tend to take a bottom-up approach to kernel design
-  - Formal methods practitioners tend toward top-down design
-- Use functional programming language Haskell to provide a programming language for OS developers, while at the same time can be translated into theorem proving tool
-- Re-implement it in C
-    - Haskell runtime is significant body of code, relies on GC that is unsuitable for real-time environments
+* OS developers tend to take a bottom-up approach to kernel design
+  * Formal methods practitioners tend toward top-down design
+* Use functional programming language Haskell to provide a programming language for OS developers, while at the same time can be translated into theorem proving tool
+* Re-implement it in C
+    * Haskell runtime is significant body of code, relies on GC that is unsuitable for real-time environments
 
-- Abstract specification
-    - Isabelle / **HOL** (Higher Order Logic) code
-    - Describes what the system does without saying how it is done, like functional behavior of kernel operations
-    - Make use of non-determinism in order to leave implementation choices to lower levels
+* Abstract specification
+    * Isabelle / **HOL** (Higher Order Logic) code
+    * Describes what the system does without saying how it is done, like functional behavior of kernel operations
+    * Make use of non-determinism in order to leave implementation choices to lower levels
 
-- Executable specification
-    - Generated from Haskell into the theorem prover and fills in the details left open at the abstract level, and to specify how the kernel works as opposed to what it does
-    - Deterministic; the only non-determinism left is the underlying machine
-- C implementation
-    - The most detailed layer in the verification
-    - The translation from C into Isabelle is correctness-critical and model the semantics of C subset precisely and foundationally
-- Machine model
-    - Programming in C is not sufficient for implementing a kernel, like assembly
-    - The basis of this formal model of the machine is the internal state of the relevant devices, collected in one record `machine_state`.
+* Executable specification
+    * Generated from Haskell into the theorem prover and fills in the details left open at the abstract level, and to specify how the kernel works as opposed to what it does
+    * Deterministic; the only non-determinism left is the underlying machine
+* C implementation
+    * The most detailed layer in the verification
+    * The translation from C into Isabelle is correctness-critical and model the semantics of C subset precisely and foundationally
+* Machine model
+    * Programming in C is not sufficient for implementing a kernel, like assembly
+    * The basis of this formal model of the machine is the internal state of the relevant devices, collected in one record `machine_state`.
 
 Proof 
 
 Use a refinement proof. 
-> A refinement proof establishes a correspondence between a high-level (abstract) and a low-level (concrete, or refined) representation of a system.
+* A refinement proof establishes a correspondence between a high-level (abstract) and a low-level (concrete, or refined) representation of a system.
 
-- Prove by showing formal refinement
-- To show that a concrete state machine $M_2$ refines an abstract one $M_1$, it is sufficient to show that for each transition in $M_2$ that may lead from an initial state $s$  to a set of states $s',$ there exists a corresponding transition on the abstract side from an abstract state $\sigma$ to a set $\sigma'$
-- The transitions correspond if there exists a relation $R$   between the states $s$ and $\sigma$ such that for each concrete state in $s'$ there is an abstract one in $\sigma'$ that makes $R$   hold between them again
-- Let
-    - machine $M_A$ denote the system framework instantiated with the abstract specification
-    - machine $M_E$  represent the framework instantiated with the executable specification
-    - machine $M_c$  stand for the framework instantiated with the C program read into the theorem prover
-- Theorem 1: $M_E$ refines $M_A$
-- Theorem 2: $M_C$ refines $M_E$
-- Theorem 3: $M_C$  refines $M_A$
+* Prove by showing formal refinement
+* To show that a concrete state machine $M_2$ refines an abstract one $M_1$, it is sufficient to show that for each transition in $M_2$ that may lead from an initial state $s$  to a set of states $s',$ there exists a corresponding transition on the abstract side from an abstract state $\sigma$ to a set $\sigma'$
+* The transitions correspond if there exists a relation $R$   between the states $s$ and $\sigma$ such that for each concrete state in $s'$ there is an abstract one in $\sigma'$ that makes $R$   hold between them again
+* Let
+    * machine $M_A$ denote the system framework instantiated with the abstract specification
+    * machine $M_E$  represent the framework instantiated with the executable specification
+    * machine $M_c$  stand for the framework instantiated with the C program read into the theorem prover
+* Theorem 1: $M_E$ refines $M_A$
+* Theorem 2: $M_C$ refines $M_E$
+* Theorem 3: $M_C$  refines $M_A$
